@@ -24,11 +24,18 @@
   Licenses:
   $FormHelper.Select("account.ProductLicense.id", $licenses, "%{value='Id', firstoption='Please Select'}")
   </p>
-  <p>
-  Permissions:
+  <p>  
+  Permissions:  <br />
+  Total: $account.Permissions.Count <br />
 #set($list = $FormHelper.CreateCheckboxList("account.Permissions", $permissions, "%{value='Id', id='account_permissions'}"))
 #foreach($it in $list)
   $list.Item() $it
+#end
+  </p>
+  <p>
+  Users:
+#foreach($user in $account.Users)
+  $user.Name
 #end
   </p>
 
