@@ -25,7 +25,14 @@
   Permissions:
 #set($list = $FormHelper.CreateCheckboxList("account.Permissions", $permissions, "%{value='Id', id='account_permissions'}"))
 #foreach($it in $list)
-  $list.Item() $it
+  $list.Item() $it.Name
+#end
+  </p>
+  <p>
+  User:
+#set($list = $FormHelper.CreateCheckboxList("account.Users", $users, "%{value='Id', id='account_users'}"))
+#foreach($it in $list)
+  $list.Item() $it.Name
 #end
   </p>
 
